# weekly_reports

./: .gitignore  README.md  example_report.json  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
tests/: test_api.py  test_workflow.py
weekly_reports/: __init__.py  api.py  cli.py  metrics.py  models.py  pdf.py  server.py  snapshot.py  workflow.py
