[project]
name = "weekly_reports"
version = "0.1.0"
description = "Weekly report generator for study/task management."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "weekly_reports"}]
dependencies = [
  "fastapi>=0.115.0",
  "reportlab>=4.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[project.scripts]
weekly-report = "weekly_reports.cli:main"
weekly-report-api = "weekly_reports.server:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
